Bug#42954: SQL MODE 'NO_DIR_IN_CREATE' does not work with subpartitions

There was no check for DATA/INDEX DIRECTORY for subpartitions

Added the same check as for partitions.